fathers day image added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Hello Git</h1>
     <p>OSL father's day post image</p>
-    
+    <img src="osl-fathers-day.png" alt="">
 </body>
 </html>
